--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="add_date">Date</string>
     <string name="date_format">(DD/MM/YYYY)</string>
     <string name="fill_the_description">Fill the description</string>
+    <string name="notes">Notes</string>
 </resources>
