--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="date_format">(DD/MM/YYYY)</string>
     <string name="fill_the_description">Fill the description</string>
     <string name="notes">Notes</string>
+    <string name="delete_all">Delete All</string>
 </resources>
