--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="fill_the_description">Fill the description</string>
     <string name="notes">Notes</string>
     <string name="delete_all">Delete All</string>
+    <string name="notes_splashScreen">NoTeS</string>
 </resources>
