--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="fill_the_description">Fill the description</string>
     <string name="notes">Notes</string>
     <string name="delete_all">Delete All</string>
-    <string name="notes_splashScreen">NoTeS</string>
+    <string name="notes_splashScreen">NOTES</string>
     <string name="delete">Delete</string>
     <string name="confirm_message">Are you sure you want to delete this note ?</string>
     <string name="yes">Yes</string>
