Changes made in xml layout and added a validate function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="save_note">Note Saved</string>
     <string name="deletedSuccessfully">Deleted Successfully</string>
     <string name="requirements_message">Please fill the requirements</string>
+    <string name="title_validation_error">Title can only contain alphabets,numbers or @,$,-</string>
 
 </resources>
